# qdns

./: .gitignore  Cargo.toml  LICENSE  PERFORMANCE.md  README.md  big_wordlist.txt  l.txt  results_100.txt  results_2000.txt  results_conservative.txt  results_enhanced_1000.txt  results_enhanced_full.txt  results_enhanced_multi_resolver.txt  results_enhanced_resolvers.txt  results_final.txt  results_full.txt  results_optimized.txt  subdomain.txt
examples/: common_subdomains.txt  dns_resolvers.txt
src/: cli.rs  engine.rs  main.rs  packet.rs  pool.rs  resolvers.rs  sharding.rs  system.rs
