[package]
name = "qdns"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
trust-dns-resolver = "0.23"
trust-dns-proto = "0.23"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
crossbeam-channel = "0.5"
dashmap = "5.0"
once_cell = "1.19"
libc = "0.2"
num_cpus = "1.16"
