[package]
name = "qdns"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
trust-dns-proto = "0.23"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
dashmap = "5.0"
once_cell = "1.19"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.0"
num_cpus = "1.16"
libc = "0.2"
socket2 = "0.5"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
